--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -17,8 +17,7 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  infinite_cards:
-    path: ../
+  infinite_cards: ^1.0.0
   flutter:
     sdk: flutter
 
