--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -17,7 +17,8 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  infinite_cards: ^1.0.2
+  infinite_cards:
+    path: ../
   flutter:
     sdk: flutter
 
